@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
-1.002001
+1.003000
+ [Added / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
 
 1.002000 2014-08-18T03:26:39Z
  [Added / runtime requires]
