@@ -1,6 +1,9 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
-1.002001
+1.003000
+ [Added / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
+
  [Changed / develop suggests]
  - Dist::Zilla::PluginBundle::Author::KENTNL 2.018000 → 2.020000
 
