@@ -1,6 +1,6 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
-1.002001
+1.003000
 
 1.002000 2014-08-18T03:26:39Z
 
